// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryListItem should render and match snapshot 1`] = `
<div
  className="row"
>
  <Connect(LinkComponent)
    href="/augsburg/de/willkommen"
  >
    <img
      className="categoryThumbnail"
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <div
      className="categoryCaption"
    >
      Willkommen
    </div>
  </Connect(LinkComponent)>
  <div
    className="subRow"
    key="5234"
  >
    <Connect(LinkComponent)
      href="/augsburg/de/test"
    >
      <img
        className="categoryThumbnail"
        src="https://cms.integreat-ap…03/Beratung-150x150.png"
      />
      <div
        className="categoryCaption"
      >
        Child
      </div>
    </Connect(LinkComponent)>
  </div>
</div>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<div
  className="row"
>
  <Connect(LinkComponent)>
    <img
      className="categoryThumbnail"
      src="test-file-stub"
    />
    <div
      className="categoryCaption"
    >
      GotNoThumb :O
    </div>
  </Connect(LinkComponent)>
  <div
    className="subRow"
    key="42"
  >
    <Connect(LinkComponent)>
      <div
        className="categoryThumbnail"
      />
      <div
        className="categoryCaption"
      >
        GotNoThumb :O
      </div>
    </Connect(LinkComponent)>
  </div>
</div>
`;
